--- a/MyIdentityProvider/appsettings.Development.json
+++ b/MyIdentityProvider/appsettings.Development.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AppSettings": {
+    "Secret": "ini adalah secret key yang digunakan pada JWT, anda dapat membuat key nya secara bebas"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=IdentityProDb;Integrated Security=SSPI"
   }
